# ai_language

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: service.ailang
src/ai_language/: __init__.py  cli.py  client.py  compiler.py  config.py  ir.py  pipeline.py
tests/: test_cli.py  test_compiler.py  test_config.py  test_pipeline.py
