[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "ai-language-pro"
version = "0.2.0"
description = "AI programming language prototype: instructions -> semantic graph -> AST -> multi-target codegen."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "AI Language Contributors" }
]
keywords = ["ai", "llm", "nlp", "cli", "openai"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "openai>=1.40.0",
  "python-dotenv>=1.0.1"
]

[project.urls]
Homepage = "https://example.com/ai-language-pro"
Repository = "https://example.com/ai-language-pro/repo"
Issues = "https://example.com/ai-language-pro/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.6.0",
  "build>=1.2.2",
  "twine>=5.1.1"
]

[project.scripts]
ai-language = "ai_language.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_language"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
